--- a/src/CartContainer.css
+++ b/src/CartContainer.css
@@ -97,6 +97,13 @@
   color: #09f;
 }
 
+.cart_item_amount button {
+  background: none;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
 .cart_item_amount p {
   font-size: 2rem;
   font-weight: 900;
