--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rajdhani:wght@300&display=swap");
 
 :root {
-  --primary-font: Roboto, Arial, sans-serif;
+  --primary-font: "Rajdhani", Arial, sans-serif;
   --base-font-size: 0.625rem;
   --primary-color: #0099ff;
   --secondary-color: #77c9ff;
