--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
   --primary-font: "Rajdhani", Arial, sans-serif;
-  --base-font-size: 0.625rem;
+  --base-font-size: 10px;
   --primary-color: #0099ff;
   --secondary-color: #77c9ff;
   --red-color: #ff0000;
