--- a/src/components/CartContainer/CartContainer.css
+++ b/src/components/CartContainer/CartContainer.css
@@ -7,16 +7,16 @@
   height: auto;
 }
 
-.cart__title {
+.cart__header {
   padding: 1rem;
 }
 
-.cart__title h2 {
+.cart__title {
   font-size: 5rem;
   text-align: center;
 }
 
-.cart__title h4 {
+.cart__description {
   font-size: 3rem;
   text-align: center;
 }
@@ -31,84 +31,6 @@
   margin: 1rem 0 1rem 0;
 }
 
-.cart__item {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-flow: row wrap;
-  width: 100%;
-  height: 10rem;
-}
-
-.cart__item__img {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex: 1 1 auto;
-}
-
-.cart__item__img img {
-  width: 7rem;
-  height: 7rem;
-  object-fit: cover;
-}
-
-.cart__item__information {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  flex-flow: column wrap;
-  height: 100%;
-  flex: 2 1 auto;
-  width: 20rem;
-}
-
-.cart__item__information h3 {
-  font-size: 2rem;
-  margin-bottom: 0.5rem;
-}
-
-.cart__item__information p {
-  font-size: 1.5rem;
-  font-weight: 600;
-  margin-bottom: 0.5rem;
-}
-
-.cart__item__information button {
-  background: none;
-  border: none;
-  color: var(--primary-color);
-  font-size: 1.5rem;
-  font-weight: 600;
-}
-
-.cart__item__amount {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-flow: column wrap;
-  flex: 1 1 auto;
-}
-
-#cart-up,
-#cart-down {
-  font-size: 2rem;
-  font-weight: 900;
-  color: var(--primary-color);
-}
-
-.cart__item__amount button {
-  background: none;
-  outline: none;
-  border: none;
-  cursor: pointer;
-}
-
-.cart__item__amount p {
-  font-size: 2rem;
-  font-weight: 900;
-}
-
 .cart__total {
   display: flex;
   align-items: center;
@@ -119,7 +41,7 @@
   border-top: 0.2rem solid var(--black-color);
 }
 
-.cart__total__price {
+.cart__price {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -128,16 +50,16 @@
   width: 100%;
 }
 
-.cart__total__price h3 {
+.cart__price-title {
   font-size: 2rem;
 }
 
-.cart__total__price p {
+.cart__price-number {
   font-size: 2rem;
   font-weight: 700;
 }
 
-.cart__total button {
+.cart__clear-cart {
   margin-bottom: 1rem;
   border-radius: 1rem;
   border: 0.2rem solid var(--red-color);
@@ -145,25 +67,6 @@
   font-size: 2rem;
   color: var(--red-color);
   padding: 0.5rem;
-}
-
-@media only screen and (min-width: 280px) and (max-width: 360px) {
-  .cart__item__img img {
-    width: 5rem;
-    height: 5rem;
-  }
-
-  .cart__item__information {
-    width: 15rem;
-  }
-
-  .cart__item__information h3 {
-    font-size: 1.5rem;
-  }
-
-  .cart__item__information p {
-    font-size: 1rem;
-  }
 }
 
 @media only screen and (min-width: 1024px) {
